docs/versioned_docs/version-0.16.1/api/v2/data/list-salesforce-contacts.api.mdx
---
id: list-salesforce-contacts
title: "List contacts"
description: "**NOTE**: To use the Data Listing API you need to use the Supaglue Managed Destination and select [Standard Objects](https://docs.supaglue.com/next/platform/objects/overview#configuration) to be synced."
sidebar_label: "List contacts"
hide_title: true
hide_table_of_contents: true
api: {"operationId":"listSalesforceContacts","description":"**NOTE**: To use the Data Listing API you need to use the Supaglue Managed Destination and select [Standard Objects](https://docs.supaglue.com/next/platform/objects/overview#configuration) to be synced.\n","tags":["Salesforce"],"security":[{"x-api-key":[]}],"parameters":[{"name":"modified_after","in":"query","schema":{"type":"string","format":"date-time","example":"2023-02-23T00:00:00.000Z"},"description":"If provided, will only return objects modified after this datetime"},{"name":"page_size","in":"query","schema":{"type":"string","example":"123"},"description":"Number of results to return per page. (Max: 1000)"},{"name":"cursor","in":"query","schema":{"type":"string","example":"cD0yMDIxLTAxLTA2KzAzJTNBMjQlM0E1My40MzQzMjYlMkIwMCUzQTAw"},"description":"The pagination cursor value"},{"name":"x-customer-id","in":"header","schema":{"type":"string","example":"my-customer-1"},"description":"The customer ID that uniquely identifies the customer in your application","required":true}],"responses":{"200":{"description":"Contacts","content":{"application/json":{"schema":{"type":"object","properties":{"pagination":{"type":"object","properties":{"next":{"type":"string","nullable":true,"example":"eyJpZCI6IjQyNTc5ZjczLTg1MjQtNDU3MC05YjY3LWVjYmQ3MDJjNmIxNCIsInJldmVyc2UiOmZhbHNlfQ=="},"previous":{"type":"string","nullable":true,"example":"eyJpZCI6IjBjZDhmYmZkLWU5NmQtNDEwZC05ZjQxLWIwMjU1YjdmNGI4NyIsInJldmVyc2UiOnRydWV9"},"total_count":{"type":"number","example":100}},"required":["next","previous"],"title":"pagination"},"records":{"type":"array","items":{"type":"object","properties":{"Id":{"type":"string","description":"The unique identifier for this contact."},"Description":{"type":"string","nullable":true,"description":"A description of the contact."},"Email":{"type":"string","nullable":true,"description":"The contact's email address."},"AccountId":{"type":"string","nullable":true,"description":"ID of the account that's the parent of this contact. This is a relationship field."},"FirstName":{"type":"string","nullable":true,"description":"The contact's first name up to 40 characters."},"HomePhone":{"type":"string","nullable":true,"description":"The contact's home phone number."},"IsDeleted":{"type":"boolean","description":"Indicates whether the object has been moved to the Recycle Bin (true) or not (false)."},"LastActivityDate":{"type":"string","format":"date-time","example":"2022-02-27T00:00:00Z","nullable":true,"description":"The date of the last activity on a contact. The LastActivityDate is set to whichever is more recent -- the LastActivityDate of a related task or event or the LastModifiedDate of a contact's record."},"LastName":{"type":"string","nullable":true,"description":"The contact's last name. Maximum size is 80 characters."},"LeadSource":{"type":"string","nullable":true,"description":"The source of the lead."},"MailingCity":{"type":"string","nullable":true,"description":"The city of the mailing address of this contact."},"MailingCountry":{"type":"string","nullable":true,"description":"The country of the mailing address of this contact."},"MailingPostalCode":{"type":"string","nullable":true,"description":"The postal code of the mailing address of this contact."},"MailingState":{"type":"string","nullable":true,"description":"The state of the mailijng address of this contact."},"MailingStreet":{"type":"string","nullable":true,"description":"The street of the mailing address of this contact."},"MobilePhone":{"type":"string","nullable":true,"description":"The contact's mobile phone number."},"OwnerId":{"type":"string","nullable":true,"description":"ID of the user who owns this contact. This is a relationship field."},"Phone":{"type":"string","nullable":true,"description":"The contact's phone number."},"Fax":{"type":"string","nullable":true,"description":"The contact's fax number."},"Title":{"type":"string","nullable":true,"description":"The contact's title."},"CreatedDate":{"type":"string","format":"date-time","example":"2022-02-27T00:00:00Z","description":"The date and time when this contact was created."},"SystemModstamp":{"type":"string","format":"date-time","example":"2022-02-27T00:00:00Z","description":"The date and time when this contact was last modified."},"raw_data":{"type":"object","description":"The raw data returned by the provider.","additionalProperties":true}},"required":["Id","Description","Email","AccountId","FirstName","HomePhone","IsDeleted","LastActivityDate","LastName","LeadSource","MailingCity","MailingCountry","MailingPostalCode","MailingState","MailingStreet","MobilePhone","OwnerId","Phone","Fax","Title","CreatedDate","SystemModstamp","raw_data"],"title":"salesforce_contact"}}},"required":["pagination","records"]}}}}},"method":"get","path":"/salesforce/contacts","servers":[{"url":"https://api.supaglue.io/data/v2","description":"Supaglue API"}],"securitySchemes":{"x-api-key":{"type":"apiKey","name":"x-api-key","in":"header","description":"API key to allow developers to access the API"}},"info":{"version":"0.13.13","title":"Data Listing API","contact":{"name":"Supaglue","email":"docs@supaglue.com","url":"https://supaglue.com"},"description":"#### Introduction\n\nWelcome to the Provider API documentation for Data Listing. You can use this API to list standard and custom objects to sync them from Supaglue to your database.\n\n:::info\n**NOTE**: To use the Data Listing API you need to use the Supaglue Managed Destination and select [Standard Objects](https://docs.supaglue.com/next/platform/objects/overview#configuration) to be synced.\n:::\n\n[![Run in Postman](https://run.pstmn.io/button.svg)](https://www.postman.com/supaglue/workspace/supaglue-public/overview)\n\n#### Base API URL\n```\nhttps://api.supaglue.io/data/v2\n```\n"},"postman":{"name":"List contacts","description":{"content":"**NOTE**: To use the Data Listing API you need to use the Supaglue Managed Destination and select [Standard Objects](https://docs.supaglue.com/next/platform/objects/overview#configuration) to be synced.\n","type":"text/plain"},"url":{"path":["salesforce","contacts"],"host":["{{baseUrl}}"],"query":[{"disabled":false,"description":{"content":"If provided, will only return objects modified after this datetime","type":"text/plain"},"key":"modified_after","value":""},{"disabled":false,"description":{"content":"Number of results to return per page. (Max: 1000)","type":"text/plain"},"key":"page_size","value":""},{"disabled":false,"description":{"content":"The pagination cursor value","type":"text/plain"},"key":"cursor","value":""}],"variable":[]},"header":[{"disabled":false,"description":{"content":"(Required) The customer ID that uniquely identifies the customer in your application","type":"text/plain"},"key":"x-customer-id","value":""},{"key":"Accept","value":"application/json"}],"method":"GET","auth":{"type":"apikey","apikey":[{"type":"any","value":"x-api-key","key":"key"},{"type":"any","value":"<API Key>","key":"value"},{"type":"any","value":"header","key":"in"}]}}}
sidebar_class_name: "get api-method"
info_path: api/v2/data/data-listing-api
custom_edit_url: null
---

import ApiTabs from "@theme/ApiTabs";
import DiscriminatorTabs from "@theme/DiscriminatorTabs";
import MethodEndpoint from "@theme/ApiDemoPanel/MethodEndpoint";
import SecuritySchemes from "@theme/ApiDemoPanel/SecuritySchemes";
import MimeTabs from "@theme/MimeTabs";
import ParamsItem from "@theme/ParamsItem";
import ResponseSamples from "@theme/ResponseSamples";
import SchemaItem from "@theme/SchemaItem";
import SchemaTabs from "@theme/SchemaTabs";
import TabItem from "@theme/TabItem";

<h1 className={"openapi__heading"}>List contacts</h1>

<MethodEndpoint method={"get"} path={"/salesforce/contacts"}></MethodEndpoint>

<SecuritySchemes infoPath={"api/v2/data/data-listing-api"}></SecuritySchemes>



**NOTE**: To use the Data Listing API you need to use the Supaglue Managed Destination and select [Standard Objects](https://docs.supaglue.com/next/platform/objects/overview#configuration) to be synced.


## Request

<details style={{"marginBottom":"1rem"}} className={"openapi-markdown__details"} data-collapsed={false} open={true}><summary style={{}}><h3 className={"openapi-markdown__details-summary-header-params"}>Query Parameters</h3></summary><div><ul><ParamsItem className={"paramsItem"} param={{"name":"modified_after","in":"query","schema":{"type":"string","format":"date-time","example":"2023-02-23T00:00:00.000Z"},"description":"If provided, will only return objects modified after this datetime"}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"name":"page_size","in":"query","schema":{"type":"string","example":"123"},"description":"Number of results to return per page. (Max: 1000)"}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"name":"cursor","in":"query","schema":{"type":"string","example":"cD0yMDIxLTAxLTA2KzAzJTNBMjQlM0E1My40MzQzMjYlMkIwMCUzQTAw"},"description":"The pagination cursor value"}}></ParamsItem></ul></div></details><details style={{"marginBottom":"1rem"}} className={"openapi-markdown__details"} data-collapsed={false} open={true}><summary style={{}}><h3 className={"openapi-markdown__details-summary-header-params"}>Header Parameters</h3></summary><div><ul><ParamsItem className={"paramsItem"} param={{"name":"x-customer-id","in":"header","schema":{"type":"string","example":"my-customer-1"},"description":"The customer ID that uniquely identifies the customer in your application","required":true}}></ParamsItem></ul></div></details><div><div><ApiTabs><TabItem label={"200"} value={"200"}><div>

Contacts

</div><div><MimeTabs className={"openapi-tabs__mime"} schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs className={"openapi-tabs__schema"}><TabItem label={"Schema"} value={"Schema"}><details style={{}} className={"openapi-markdown__details response"} data-collapsed={false} open={true}><summary style={{}} className={"openapi-markdown__details-summary-response"}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>pagination</strong><span className={"openapi-schema__name"}> object</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"next"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"eyJpZCI6IjQyNTc5ZjczLTg1MjQtNDU3MC05YjY3LWVjYmQ3MDJjNmIxNCIsInJldmVyc2UiOmZhbHNlfQ=="}}></SchemaItem><SchemaItem collapsible={false} name={"previous"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"eyJpZCI6IjBjZDhmYmZkLWU5NmQtNDEwZC05ZjQxLWIwMjU1YjdmNGI4NyIsInJldmVyc2UiOnRydWV9"}}></SchemaItem><SchemaItem collapsible={false} name={"total_count"} required={false} schemaName={"number"} qualifierMessage={undefined} schema={{"type":"number","example":100}}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>records</strong><span className={"openapi-schema__name"}> object[]</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"Id"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","description":"The unique identifier for this contact."}}></SchemaItem><SchemaItem collapsible={false} name={"Description"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"A description of the contact."}}></SchemaItem><SchemaItem collapsible={false} name={"Email"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"The contact's email address."}}></SchemaItem><SchemaItem collapsible={false} name={"AccountId"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"ID of the account that's the parent of this contact. This is a relationship field."}}></SchemaItem><SchemaItem collapsible={false} name={"FirstName"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"The contact's first name up to 40 characters."}}></SchemaItem><SchemaItem collapsible={false} name={"HomePhone"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"The contact's home phone number."}}></SchemaItem><SchemaItem collapsible={false} name={"IsDeleted"} required={true} schemaName={"boolean"} qualifierMessage={undefined} schema={{"type":"boolean","description":"Indicates whether the object has been moved to the Recycle Bin (true) or not (false)."}}></SchemaItem><SchemaItem collapsible={false} name={"LastActivityDate"} required={true} schemaName={"date-time"} qualifierMessage={undefined} schema={{"type":"string","format":"date-time","example":"2022-02-27T00:00:00Z","nullable":true,"description":"The date of the last activity on a contact. The LastActivityDate is set to whichever is more recent -- the LastActivityDate of a related task or event or the LastModifiedDate of a contact's record."}}></SchemaItem><SchemaItem collapsible={false} name={"LastName"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"The contact's last name. Maximum size is 80 characters."}}></SchemaItem><SchemaItem collapsible={false} name={"LeadSource"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"The source of the lead."}}></SchemaItem><SchemaItem collapsible={false} name={"MailingCity"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"The city of the mailing address of this contact."}}></SchemaItem><SchemaItem collapsible={false} name={"MailingCountry"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"The country of the mailing address of this contact."}}></SchemaItem><SchemaItem collapsible={false} name={"MailingPostalCode"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"The postal code of the mailing address of this contact."}}></SchemaItem><SchemaItem collapsible={false} name={"MailingState"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"The state of the mailijng address of this contact."}}></SchemaItem><SchemaItem collapsible={false} name={"MailingStreet"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"The street of the mailing address of this contact."}}></SchemaItem><SchemaItem collapsible={false} name={"MobilePhone"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"The contact's mobile phone number."}}></SchemaItem><SchemaItem collapsible={false} name={"OwnerId"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"ID of the user who owns this contact. This is a relationship field."}}></SchemaItem><SchemaItem collapsible={false} name={"Phone"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"The contact's phone number."}}></SchemaItem><SchemaItem collapsible={false} name={"Fax"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"The contact's fax number."}}></SchemaItem><SchemaItem collapsible={false} name={"Title"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"description":"The contact's title."}}></SchemaItem><SchemaItem collapsible={false} name={"CreatedDate"} required={true} schemaName={"date-time"} qualifierMessage={undefined} schema={{"type":"string","format":"date-time","example":"2022-02-27T00:00:00Z","description":"The date and time when this contact was created."}}></SchemaItem><SchemaItem collapsible={false} name={"SystemModstamp"} required={true} schemaName={"date-time"} qualifierMessage={undefined} schema={{"type":"string","format":"date-time","example":"2022-02-27T00:00:00Z","description":"The date and time when this contact was last modified."}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>raw_data</strong><span className={"openapi-schema__name"}> object</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

The raw data returned by the provider.

</div><SchemaItem name={"property name*"} required={false} schemaName={"any"} qualifierMessage={undefined} schema={{"type":"object","description":"The raw data returned by the provider.","additionalProperties":true}} collapsible={false} discriminator={false}></SchemaItem></div></details></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"pagination\": {\n    \"next\": \"eyJpZCI6IjQyNTc5ZjczLTg1MjQtNDU3MC05YjY3LWVjYmQ3MDJjNmIxNCIsInJldmVyc2UiOmZhbHNlfQ==\",\n    \"previous\": \"eyJpZCI6IjBjZDhmYmZkLWU5NmQtNDEwZC05ZjQxLWIwMjU1YjdmNGI4NyIsInJldmVyc2UiOnRydWV9\",\n    \"total_count\": 100\n  },\n  \"records\": [\n    {\n      \"Id\": \"string\",\n      \"Description\": \"string\",\n      \"Email\": \"string\",\n      \"AccountId\": \"string\",\n      \"FirstName\": \"string\",\n      \"HomePhone\": \"string\",\n      \"IsDeleted\": true,\n      \"LastActivityDate\": \"2022-02-27T00:00:00Z\",\n      \"LastName\": \"string\",\n      \"LeadSource\": \"string\",\n      \"MailingCity\": \"string\",\n      \"MailingCountry\": \"string\",\n      \"MailingPostalCode\": \"string\",\n      \"MailingState\": \"string\",\n      \"MailingStreet\": \"string\",\n      \"MobilePhone\": \"string\",\n      \"OwnerId\": \"string\",\n      \"Phone\": \"string\",\n      \"Fax\": \"string\",\n      \"Title\": \"string\",\n      \"CreatedDate\": \"2022-02-27T00:00:00Z\",\n      \"SystemModstamp\": \"2022-02-27T00:00:00Z\",\n      \"raw_data\": {}\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem></ApiTabs></div></div>
      
